fix flicker

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,7 +26,9 @@ a, a:visited, a:link {
     weight: bold;
   }
   color: $light-blue;
-  -webkit-backface-visibility: hidden;
+}
+
+a {
   transition: color 0.3s ease-in-out;
 
   &:hover {
